readability fixes

--- a/src/main.scss
+++ b/src/main.scss
@@ -79,7 +79,7 @@ hr{
 }
 
 #landing p.intro{
-    font-size:2.6em;
+    font-size:2.8em;
     line-height:1em;
     width:80%;
     max-width:600px;
@@ -141,7 +141,18 @@ transition: all .4s linear;
     text-decoration: none;
     font-size:1.6em;
     color: $text;
+    display: inline-block;
+    -webkit-transition: all .4s linear;
+-moz-transition: all .4s linear;
+-ms-transition: all .4s linear;
+-o-transition: all .4s linear;
+transition: all .4s linear;
 }
+
+#rec:hover{
+    transform: translateY(-2px);
+}
+
 
 #love{
     margin:7vh 1em 1em 1em;
@@ -153,6 +164,7 @@ transition: all .4s linear;
     margin:1em;
     
     a{
+        padding:.5em;
         text-decoration: none;
         color: inherit;
     }
@@ -197,6 +209,10 @@ transition: all .4s linear;
     max-width:250px;
     display: inline-block;
     color: #000;
+    background: none;
+    border:1px solid transparent;
+    color:#fff;
+    text-align: center;
 }
 
 .newsletter input[type="submit"]{
